dump/crunchy-postgrescluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crunchy-demo
